@@ -1,7 +1,7 @@
 Package: mlt
 Title: Most Likely Transformations
 Version: 1.2-1
-Date: 2020-05-13
+Date: 2021-01-12
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Likelihood-based estimation of conditional transformation
